--- a/index.html
+++ b/index.html
@@ -26,6 +26,52 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #64748b; 
       }
+      /* Custom Range Slider */
+      input[type="range"] {
+        -webkit-appearance: none;
+        appearance: none;
+      }
+      input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background: #10b981;
+        cursor: pointer;
+        border: 2px solid #0f172a;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+        transition: all 0.2s;
+      }
+      input[type="range"]::-webkit-slider-thumb:hover {
+        background: #059669;
+        transform: scale(1.1);
+      }
+      input[type="range"]::-webkit-slider-thumb:active {
+        transform: scale(0.95);
+      }
+      input[type="range"]::-moz-range-thumb {
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background: #10b981;
+        cursor: pointer;
+        border: 2px solid #0f172a;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+        transition: all 0.2s;
+      }
+      input[type="range"]::-moz-range-thumb:hover {
+        background: #059669;
+        transform: scale(1.1);
+      }
+      input[type="range"]:disabled::-webkit-slider-thumb {
+        background: #475569;
+        cursor: not-allowed;
+      }
+      input[type="range"]:disabled::-moz-range-thumb {
+        background: #475569;
+        cursor: not-allowed;
+      }
     </style>
   <script type="importmap">
 {
